# strategy-studio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  Makefile  README.md  SYSTEM_SUMMARY.md  V10_VISION.md  demo.py  install.sh  pyproject.toml  rig_studio_cli.py  viz_archetypes.py  walkthrough_hed.py  workflow_map.py
.agentforge/: plan.md  scorecard.json  workflows.html
artifacts/: build_cards.json  buildout-cards.yaml  strategic-vision-2026-2031.md
cli/: main.py  manifest.json
demo_output/: presentation.html  strategy_analysis:_stripe.json  strategy_analysis:_stripe.md
docs/: RIG_VERIFICATION.md  V10_SPEC.md  cli-guide.md  codex-prompt.md  rig-gtm-crm-all-prospects-import.md  rig-lattice-architecture.md  teaser-runbook.md
evals/: regression-2026-05-27-soul-id-bypass.yaml
inputs/: prospect_list.csv  prospect_list.sample.csv
rusr/: approval_halt.py  budget_governance.py  cross_family_verifier.py  loop_governance.py  memory_firewall.py  output_guardrails.py  receipts.py  retry_governance.py
scripts/: apollo_org_enrich_teaser_prospects.py  build_candidate_domain_enrichment.py  build_denver_gtm_workbook.py  build_regional_gtm_pack.py  build_rig_teaser_inputs.py  build_twenty_gtm_imports.py  codex-bootstrap.sh  create_rig_gtm_app_icon.py  import_all_prospects_to_twenty_db.py  import_twenty_gtm_to_twenty.py  launch_rig_gtm_crm.sh  scraper_enrich_teaser_prospects.py  serve_strategy_artifacts.sh  sync_strategy_research_to_twenty.py  verify_card_workflow_match.py
strategy_studio/: __init__.py  archon.py  cli.py  cli_wizard.py  data_pipeline.py  (+10 more)
(+405 files in other folders)
