[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rig-strategy-studio"
version = "0.1.0"
description = "RIG Strategy Studio — deterministic strategy synthesis, wargame, forecasting, and decision room engine."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click",
    "fastapi",
    "uvicorn[standard]",
    "pyyaml",
    "rich",
    "httpx",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["strategy_studio"]

[tool.hatch.build.targets.wheel.shared-data]
"strategy_studio/teaser/templates" = "strategy_studio/teaser/templates"

[project.scripts]
strategy-studio = "strategy_studio.cli:main"
strategy-studio-wizard = "strategy_studio.cli_wizard:main"
rig-strategy-studio = "rig_studio_cli:main"
